refactor(ingestion): fetch matrix with java.net.http.HttpClient (HTTP/HTTPS only)
Addresses PR review #7 (SSRF / URLConnection accepts any protocol). The old
implementation used java.net.URLConnection, which transparently handles
file://, jar://, ftp://, and other schemes. If a future code path lets a
non-admin influence the matrix URL (e.g. a GmsAspect-backed source), the URL
would be reachable as an SSRF primitive against the GMS pod's filesystem.
Not exploitable today (the URL is operator-controlled via env var), but
fixing it now means the future backend is born safe.

Switched HttpUrlIngestionCliVersionMatrixSource.refresh() to
java.net.http.HttpClient (Java 11+). HttpClient supports HTTP and HTTPS only
-- any other scheme throws IllegalArgumentException at send-time, which the
existing catch (Exception) branch turns into the same "Failed to refresh ...
Retaining last known matrix" WARN that other fetch failures produce. The
connect and per-request timeouts (10s, unchanged) carry over. Added an
explicit non-2xx response check because URLConnection used to throw
IOException on non-2xx from getInputStream() whereas HttpClient does not.
Also added an InterruptedException handler that restores Thread.interrupt()
per project convention.

Test infrastructure migrated from temp-file + file:// URIs to embedded
com.sun.net.httpserver.HttpServer fixtures, since HttpClient rejects
file://:

  - IngestionCliVersionMatrixServiceTest: new startMatrixServer(json) helper
    + @AfterMethod tearDown. Six sites that previously called
    Files.createTempFile / tmp.toUri() now go through the helper. Dropped
    the Files/Path imports.
  - CreateIngestionExecutionRequestResolverTest.matrixServiceForConnector:
    same migration with a JVM shutdown hook to stop the per-call server.

Behaviour preserved end-to-end: 75 unit tests across 7 suites pass; the
three demo scripts (4-tier ladder, full happy path, phase 2 edge cases) run
green against a live GMS fetching from an HTTPS gist. 